--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" version="6.0">
-  <servlet>
+  <!--<servlet>
     <description></description>
     <display-name>ServletMembre</display-name>
     <servlet-name>ServletMembre</servlet-name>
@@ -10,15 +10,8 @@
     <servlet-name>ServletMembre</servlet-name>
     <url-pattern>/ServletMembre</url-pattern>
   </servlet-mapping>
-  <display-name>GestionBiblio</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+  <display-name>GestionBiblio</display-name>-->
+
   <servlet>
     <description></description>
     <display-name>ServletLivre</display-name>
@@ -27,9 +20,9 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>ServletLivre</servlet-name>
-    <url-pattern>/ServletLivre</url-pattern>
+    <url-pattern>*.java</url-pattern>
   </servlet-mapping>
-  <servlet>
+<!--  <servlet>
     <description></description>
     <display-name>ServletEmprunt</display-name>
     <servlet-name>ServletEmprunt</servlet-name>
@@ -48,5 +41,5 @@
   <servlet-mapping>
     <servlet-name>ServletStatistic</servlet-name>
     <url-pattern>/ServletStatistic</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping>-->
 </web-app>
